esercizio svolto in aula

--- a/siw-servlet-es4-con-jsp/WebContent/index.html
+++ b/siw-servlet-es4-con-jsp/WebContent/index.html
@@ -5,15 +5,12 @@
 <title>Prima pagina</title>
 </head>
 <body>
-	<form action="processaDati" method="get">
+	<form action="processa" method="get">
 		<div>
 			Nome: <input type="text" name="nome" />
 		</div>
 		<div>
 			Cognome: <input type="text" name="cognome" />
-		</div>
-		<div>
-		Matricola: <input type="password" name="matricola" />
 		</div>
 		<input type="submit" name="sumbit" value="invia" />
 	</form>
